Reenable the test stage

--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,7 @@ script: chef exec microwave test
 stages:
   - name: unit
   - name: test
-    if: NOT type = cron AND branch = master
+    if: NOT type = cron
 
 jobs:
   include:
